opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-deribit"
bug-reports: "https://github.com/vbmithr/ocaml-deribit/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-deribit"
doc: "https://vbmithr.github.io/ocaml-deribit/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.11.4"}
  "deribit" {= version}
  "fixtypes" {= version}
  "sexplib" {>= "v0.13.0"}
  "ppx_sexp_conv" {>= "v0.13.0"}
  "ptime" {>= "0.8.5"}
  "uri" {>= "3.1.0"}
  "ocplib-json-typed" {>= "0.7.1"}
  "ezjsonm" {>= "1.1.0"}
]
synopsis: "Deribit API"
description: """
"""
