opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-deribit"
bug-reports: "https://github.com/vbmithr/ocaml-deribit/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-deribit"
doc: "https://vbmithr.github.io/ocaml-deribit/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "dune" {>= "1.11.4"}
  "sexplib" {>= "v0.12.0"}
  "ptime" {>= "0.8.5"}
  "ocplib-json-typed" {>= "0.7.1"}
]
synopsis: "Deribit API"
description: """
"""
