(test
 (name       test)
 (modules    test)
 (package deribit-rest)
 (preprocess (pps ppx_jane))
 (libraries
   deribit-rest
   alcotest-async))

(executables
 (names ws leak)
 (public_names deribit-ws-cli deribit-leak-test)
 (modules ws leak)
 (package deribit-bin)
 (preprocess (pps ppx_jane))
 (libraries
   deribit-ws
   core
   async
   yojson
   ocplib-json-typed
   fastws-async
   logs-async
   logs-async-reporter))
